Closed
Bug 122479
Opened 24 years ago
Closed 23 years ago
[mac] page access key with letters are not functional with A, Button, Textarea or Label elements
Categories
(Core :: Layout: Form Controls, defect)
Tracking
()
VERIFIED
FIXED
mozilla1.4final
People
(Reporter: chrispetersen, Assigned: Brade)
References
()
Details
(6 keywords, Whiteboard: [HTML4-17.11.2][se-radar][verified on trunk][fix landed on 1.4 branch])
Attachments
(2 files, 1 obsolete file)
|
1.86 KB,
text/xml
|
Details | |
|
2.70 KB,
patch
|
sfraser_bugs
:
review+
bryner
:
superreview+
asa
:
approval1.4+
|
Details | Diff | Splinter Review |
Build: 2002-01-29-08
Platform: Mac OS X and OS 9
Expected Results: Access key should function on a Anchor, Label, and Button
element in a HTML or XHTML document.
What I got: Assigned "key" is not processed which is specified for the element
Steps to reproduce:
1) Go to any of these three test cases:
http://mozilla.org/quality/browser/standards/html/a_accesskey.html
http://mozilla.org/quality/browser/standards/xhtml/transitional/button_accesskey.xml
http://mozilla.org/quality/browser/standards/xhtml/transitional/label_accesskey.xml,
2) Press the Control key with the assigned "key".
3) Access key is ignored.
| Reporter | ||
Updated•24 years ago
|
URL:
http://mozilla.org/quality/browse... → http://mozilla.org/quality/browser/st...
Summary: Access key not functional with A, Button, or Label elements → Access key is not functional with A, Button, or Label elements
| Reporter | ||
Comment 1•24 years ago
|
||
Textarea element with accesskey attribute has this problem too.
Summary: Access key is not functional with A, Button, or Label elements → Access key is not functional with A, Button, Textarea or Label elements
| Reporter | ||
Comment 2•24 years ago
|
||
| Reporter | ||
Comment 3•24 years ago
|
||
Basically, looks like keydown events are not being processed.
Summary: Access key is not functional with A, Button, Textarea or Label elements → [pp]Accesskey is not functional with A, Button, Textarea or Label elements[
Comment 5•24 years ago
|
||
Works fine on WINXP using 2002020512 build.
Comment 6•24 years ago
|
||
Reassigning to Don.
Marking nsbeta1+
| Reporter | ||
Comment 7•24 years ago
|
||
Yes, this is a Mac only issue.
Comment 10•24 years ago
|
||
Aaron, can you please add some information regarding this and section 508?
Comment 11•24 years ago
|
||
This isn't a Section 508 issue, although it is a major accessibility bug.
Perhaps it should be marked nsbeta1- for now.
The reason is, you can still use any of the interactive elements by tabbing to
them. Section 508 only requires that you be able to use the keyboard, not that
it be convenient.
Comment 12•24 years ago
|
||
nsbeta1-, topembed-, based on comment #11.
Updated•24 years ago
|
Comment 13•24 years ago
|
||
Updated•24 years ago
|
QA Contact: madhur → tpreston
| Reporter | ||
Comment 14•24 years ago
|
||
Remove minus from nsbeta1. This is a problem on the mac only that needs to be
resolved. This is working in NS 6.2.3.
Comment 15•24 years ago
|
||
Comment on attachment 77944 [details] [diff] [review]
Patch to reduce the brightness of the color instead of hardcoded gray.
It looks like this patch was posted to the wrong bug.
Attachment #77944 -
Attachment is obsolete: true
Updated•24 years ago
|
Summary: Accesskey is not functional with A, Button, Textarea or Label elements[ → [mac] Accesskey is not functional with A, Button, Textarea or Label elements[
Comment 16•23 years ago
|
||
*** Bug 94376 has been marked as a duplicate of this bug. ***
Comment 17•23 years ago
|
||
*** Bug 149202 has been marked as a duplicate of this bug. ***
Comment 18•23 years ago
|
||
nsbeta1+
Comment 19•23 years ago
|
||
*** Bug 168721 has been marked as a duplicate of this bug. ***
Comment 20•23 years ago
|
||
| Assignee | ||
Comment 21•23 years ago
|
||
This is not blocked by bug 44259. That bug is about shifted keyUp and keyDown
events.
Are accesskey events triggered by keyup, keypress, or keydown?
This particular bug may be blocked by 111335 but I am unfamiliar with that bug
since I hadn't seen it until just now.
*** Bug 175469 has been marked as a duplicate of this bug. ***
Comment 23•23 years ago
|
||
*** Bug 185765 has been marked as a duplicate of this bug. ***
Comment 25•23 years ago
|
||
The OS-level 'Full keyboard access' might interfere with this, since it steals
some Control-letter combinations, including Control-C.
I'll take this, since it's Mac-only.
Assignee: jkeiser → sfraser
Comment 26•23 years ago
|
||
(Is there a related bug somewhere about enabling _command_ accesskeys in chrome
dialogs?)
Comment 27•23 years ago
|
||
per comment 25: try changing the key to function keys (ie, if previously set to
control+letter keys) in the Keyboard system pref, and see if this still occurs.
Comment 28•23 years ago
|
||
Oddly, Accesskey works with numbers.
This works:
<a href='/' accesskey='1'>Home</a>
This doesn't:
<a href='/' accesskey='h'>Home</a>
Updated•23 years ago
|
Summary: [mac] Accesskey is not functional with A, Button, Textarea or Label elements[ → [mac] page access key with letters are not functional with A, Button, Textarea or Label elements[
Whiteboard: [HTML4-17.11.2] → [HTML4-17.11.2][se-radar]
Target Milestone: mozilla1.2beta → ---
| Assignee | ||
Comment 29•23 years ago
|
||
in widget/src/mac/nsMacEventHandler.cpp, a control-A keypress event goes through
HandleUKeyEvent which explicitly passes false to the aConvertChar parameter (so
the charcode is probably decimal 1 instead of character 'A')
From what I can tell, no letter combinations work.
Updated•23 years ago
|
| Assignee | ||
Comment 30•23 years ago
|
||
This bug was not fixed with the checkin to bug 184549 (which fixed bug 148130
and bug 111335). As I stated in previous comment, this has to do with character
conversion and "Control" key.
| Assignee | ||
Comment 31•23 years ago
|
||
This patch fixes all of the testcases I saw in this bug.
I also tested these things and they all continue to work:
control-space to open context menu in browser and composer
typing in text widgets and composer
opening new windows (mail compose and composer)
| Assignee | ||
Comment 32•23 years ago
|
||
Comment on attachment 124067 [details] [diff] [review]
patch to address controlkey-letter combinations
note: I also tested typing Japanese and found no regression there either.
Attachment #124067 -
Flags: superreview?(bryner)
Attachment #124067 -
Flags: review?(sfraser)
Comment 34•23 years ago
|
||
Comment on attachment 124067 [details] [diff] [review]
patch to address controlkey-letter combinations
Looks reasonable
Attachment #124067 -
Flags: review?(sfraser) → review+
Updated•23 years ago
|
QA Contact: tpreston → sairuh
Comment 35•23 years ago
|
||
Comment 36•23 years ago
|
||
Comment on attachment 124067 [details] [diff] [review]
patch to address controlkey-letter combinations
>+ // translation already occurred for the string passed to this method.
>+ if (keyEvent.isControl && keyEvent.charCode <= 26)
One suggestion, here maybe you could use keyEvent.charCode <= 'Z'
just for clarity.
sr=bryner with or without that change.
Attachment #124067 -
Flags: superreview?(bryner) → superreview+
| Assignee | ||
Comment 37•23 years ago
|
||
fix checked into trunk; will see how it goes and consider asking for 1.4 if no
regressions
Status: NEW → ASSIGNED
Comment 38•23 years ago
|
||
could we get this into the 1.4 branch?
i'll test this out on a trunk build soon.
Flags: blocking1.4?
Comment 39•23 years ago
|
||
ran some tests using today's trunk build (comm, 2003.05.29.08 on 10.2.6).
i had saved a copy of jesse's test at
http://hopey.mcom.com/tests/page-accesskeys-jesse.html
all the access keys worked there, except the ones (ctrl+W, ctrl+T) for which my
OS settings (Keyboard sys pref) took precendence.
the tests in comment 35 also appear to work.
i'm going to mark this as fixed on the trunk. if we could check this into the
branch, please add the fixed1.4 keyword. thanks!
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Updated•23 years ago
|
Whiteboard: [HTML4-17.11.2][se-radar] → [HTML4-17.11.2][se-radar][verified on trunk]
| Assignee | ||
Comment 40•23 years ago
|
||
Comment on attachment 124067 [details] [diff] [review]
patch to address controlkey-letter combinations
requesting permission to land this mac-specific fix on the 1.4branch. It
allows accesskeys to work. Sairuh has tested the trunk (where it already
landed) and found no problems.
Attachment #124067 -
Flags: approval1.4?
Comment 41•23 years ago
|
||
Comment on attachment 124067 [details] [diff] [review]
patch to address controlkey-letter combinations
a=asa (on behalf of drivers) for checkin to the 1.4 branch.
Attachment #124067 -
Flags: approval1.4? → approval1.4+
Comment 42•23 years ago
|
||
I can land this on the 1.4 branch, if you need me to.
Summary: [mac] page access key with letters are not functional with A, Button, Textarea or Label elements[ → [mac] page access key with letters are not functional with A, Button, Textarea or Label elements
Comment 43•23 years ago
|
||
a=adt to land this on the 1.4 branch.
Summary: [mac] page access key with letters are not functional with A, Button, Textarea or Label elements → [mac] page access key with letters are not functional with A, Button, Textarea or Label elements[
Updated•23 years ago
|
Summary: [mac] page access key with letters are not functional with A, Button, Textarea or Label elements[ → [mac] page access key with letters are not functional with A, Button, Textarea or Label elements
Comment 44•23 years ago
|
||
fixed also landed on 1.4 branch
Flags: blocking1.4?
Keywords: fixed1.4
Whiteboard: [HTML4-17.11.2][se-radar][verified on trunk] → [HTML4-17.11.2][se-radar][verified on trunk][fix landed on 1.4 branch]
Target Milestone: --- → mozilla1.4final
Comment 45•23 years ago
|
||
vrfy'd on branch, 2003.06.03.05-1.4 (OS X 10.2.6).
Status: RESOLVED → VERIFIED
Keywords: fixed1.4 → verified1.4
You need to log in
before you can comment on or make changes to this bug.
Description
•