fix page accesskeys that are letters (control-letter combinations) by handling control-letter sequences specially (since they are); bug 122479, r=smfr, sr=bryner